Add board API baseline
